<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF6AA"
    tools:context=".activities.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher_background" />

    <TextView
        android:id="@+id/textMyNotes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/vagrb"
        android:text="@string/EZNotes"
        android:textColor="#000000"
        android:textSize="40sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layoutSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="8dp"
        android:background="#C8C0A9"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintTop_toBottomOf="@id/textMyNotes">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_baseline_search_24"
            app:tint="@color/black" />

        <EditText
            android:id="@+id/inputSearch"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginStart="12dp"
            android:background="@null"
            android:fontFamily="@font/regular"
            android:hint="@string/search_notes"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:includeFontPadding="false"
            android:inputType="text"
            android:textColor="@color/black"
            android:textColorHint="#A8A2A2"
            android:textSize="13sp" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/notesRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingStart="0dp"
        android:paddingEnd="12dp"
        android:paddingBottom="12dp"
        app:layout_constraintBottom_toTopOf="@id/layoutQuickActions"
        app:layout_constraintTop_toBottomOf="@id/layoutSearch"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutQuickActions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FDD835"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent">


        <ImageView
            android:id="@+id/imageHelp"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="#FDD835"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_help"
            app:layout_constraintEnd_toStartOf="@+id/imageAddImage"
            app:layout_constraintStart_toStartOf="@+id/layoutQuickActions"
            app:layout_constraintTop_toTopOf="@+id/layoutQuickActions"
            app:tint="@color/black" />

        <ImageView
            android:id="@+id/imageAddImage"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="#FDD835"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_image"
            app:layout_constraintEnd_toStartOf="@+id/imageAddWebLink"
            app:layout_constraintStart_toEndOf="@+id/imageHelp"
            app:layout_constraintTop_toTopOf="@+id/layoutQuickActions"
            app:tint="@color/black" />

        <ImageView
            android:id="@+id/imageAddWebLink"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="#FDD835"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_web"
            app:layout_constraintEnd_toStartOf="@+id/imageSync"
            app:layout_constraintStart_toEndOf="@+id/imageAddImage"
            app:layout_constraintTop_toTopOf="@+id/layoutQuickActions"
            app:tint="@color/black" />

        <ImageView
            android:id="@+id/imageSync"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="#FDD835"
            android:contentDescription="@string/app_name"
            android:onClick="sysdata"
            android:src="@drawable/ic_baseline_sync_24"
            app:layout_constraintEnd_toStartOf="@+id/imageUpload"
            app:layout_constraintStart_toEndOf="@+id/imageAddWebLink"
            app:layout_constraintTop_toTopOf="@+id/layoutQuickActions"
            app:tint="@color/black" />

        <ImageView
            android:id="@+id/imageUpload"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="#FDD835"
            android:contentDescription="@string/app_name"
            android:onClick="gotoupload"
            android:src="@drawable/ic_upload"
            app:layout_constraintEnd_toStartOf="@+id/imageLogout"
            app:layout_constraintStart_toEndOf="@+id/imageSync"
            app:layout_constraintTop_toTopOf="@+id/layoutQuickActions"
            app:tint="@color/black" />

        <ImageView
            android:id="@+id/imageLogout"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="#FDD835"
            android:contentDescription="@string/app_name"
            android:onClick="logout"
            android:src="@drawable/ic_logout"
            app:layout_constraintEnd_toEndOf="@+id/layoutQuickActions"
            app:layout_constraintStart_toEndOf="@+id/imageUpload"
            app:layout_constraintTop_toTopOf="@+id/layoutQuickActions"
            app:tint="@color/black" />

        <!--        <ImageView-->
        <!--            android:id="@+id/imageSettings"-->
        <!--            android:layout_width="30dp"-->
        <!--            android:layout_height="30dp"-->
        <!--            android:background="#FDD835"-->
        <!--            android:contentDescription="@string/app_name"-->
        <!--            android:src="@drawable/ic_baseline_settings_24"-->
        <!--            app:layout_constraintEnd_toEndOf="@+id/layoutQuickActions"-->
        <!--            app:layout_constraintStart_toEndOf="@+id/imageLogout"-->
        <!--            app:layout_constraintTop_toTopOf="@+id/layoutQuickActions"-->
        <!--            app:tint="@color/black" />-->


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imageAddNoteMain"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="22dp"
        android:background="@drawable/background_add_button"
        android:contentDescription="@string/app_name"
        android:padding="5dp"
        android:src="@drawable/ic_baseline_add_24"
        app:layout_constraintBottom_toTopOf="@id/layoutQuickActions"
        app:layout_constraintEnd_toEndOf="parent"

        />


</androidx.constraintlayout.widget.ConstraintLayout>